--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:value="YOUR_APP_KEY" android:name="583c145faed17921f5001c18"/>
-        <meta-data android:value="Channel ID" android:name="main"/>
+        <meta-data
+            android:name="583c145faed17921f5001c18"
+            android:value="YOUR_APP_KEY" />
+        <meta-data
+            android:name="main"
+            android:value="Channel ID" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -33,7 +36,14 @@
         </activity>
         <activity android:name=".test.VideoSourceTestActivity" />
         <activity android:name=".test.RecordTestActivity" />
-        <activity android:name=".test.VideoEditorTestActivity"></activity>
+        <activity android:name=".test.VideoEditorTestActivity" />
+        <activity android:name=".AnimationActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
     </application>
 
 </manifest>
