--- a/mediacore/build.gradle
+++ b/mediacore/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.orhanobut:logger:1.15'
+    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.6.3'
+    // required, enough for most devices.
+    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.6.3'
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.3'
 }
