--- a/mediacore/build.gradle
+++ b/mediacore/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
@@ -18,6 +21,83 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+}
+
+
+def siteUrl = 'https://github.com/zxzx74147/MediaCore'      // 项目的主页
+def gitUrl = 'https://github.com/zxzx74147/MediaCore.git'   // Git仓库的url
+def issueUrl = 'https://github.com/zxzx74147/MediaCore/issues'
+version = "0.0.3"
+group = "com.zxzx74147"                                        // Maven Group ID for the artifact，一般填你唯一的包名
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+                // Add your description here
+                name 'MediaCore'     //项目描述
+                url siteUrl
+                // Set your license
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'zxzx74147'        //填写的一些基本信息
+                        name 'zxzx74147'
+                        email 'zxzx74147@126.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+task javadoc(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+    configurations = ['archives']
+    pkg {
+        userOrg = "zxzx74147opensource"//JCenter上创建的的Organization
+        repo = "MediaCore"//你要上传的库的名字
+        name = "MediaCore"    //发布到JCenter上的项目名字
+        desc = 'A media lib for Android, include record, edit, play.'
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+        issueTrackerUrl = issueUrl
+        labels = ['android']
     }
 }
 
