--- a/mediacore/build.gradle
+++ b/mediacore/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -39,11 +39,11 @@ android {
 }
 
 
-def siteUrl = 'https://github.com/zxzx74147/MediaCore'      // 项目的主页
-def gitUrl = 'https://github.com/zxzx74147/MediaCore.git'   // Git仓库的url
+def siteUrl = 'https://github.com/zxzx74147/MediaCore'
+def gitUrl = 'https://github.com/zxzx74147/MediaCore.git'
 def issueUrl = 'https://github.com/zxzx74147/MediaCore/issues'
-version = "0.0.5"
-group = "com.zxzx74147"                                        // Maven Group ID for the artifact，一般填你唯一的包名
+version = "0.0.6"
+group = "com.zxzx74147"
 install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
@@ -51,7 +51,7 @@ install {
             project {
                 packaging 'aar'
                 // Add your description here
-                name 'MediaCore'     //项目描述
+                name 'MediaCore'
                 url siteUrl
                 // Set your license
                 licenses {
@@ -63,7 +63,7 @@ install {
 
                 developers {
                     developer {
-                        id 'zxzx74147'        //填写的一些基本信息
+                        id 'zxzx74147'
                         name 'zxzx74147'
                         email 'zxzx74147@126.com'
                     }
@@ -102,9 +102,9 @@ bintray {
     key = properties.getProperty("bintray.apikey")
     configurations = ['archives']
     pkg {
-        userOrg = "zxzx74147opensource"//JCenter上创建的的Organization
-        repo = "MediaCore"//你要上传的库的名字
-        name = "MediaCore"    //发布到JCenter上的项目名字
+        userOrg = "zxzx74147opensource"
+        repo = "MediaCore"
+        name = "MediaCore"
         desc = 'A media lib for Android, include record, edit, play.'
         websiteUrl = siteUrl
         vcsUrl = gitUrl
@@ -115,6 +115,7 @@ bintray {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -123,9 +124,9 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     compile 'com.orhanobut:logger:1.15'
-    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.6.3'
+    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     // required, enough for most devices.
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.6.3'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.3'
+    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
 
 }
