--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.tumblr:backboard:0.1.0'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
