--- a/mediacore/build.gradle
+++ b/mediacore/build.gradle
@@ -49,7 +49,7 @@ android {
 def siteUrl = 'https://github.com/zxzx74147/MediaCore'
 def gitUrl = 'https://github.com/zxzx74147/MediaCore.git'
 def issueUrl = 'https://github.com/zxzx74147/MediaCore/issues'
-version = "0.2.3"
+version = "0.2.4"
 group = "com.zxzx74147"
 install {
     repositories.mavenInstaller {
@@ -109,7 +109,7 @@ bintray {
     key = properties.getProperty("bintray.apikey")
     configurations = ['archives']
     pkg {
-        userOrg = "zxzx74147opensource"
+        userOrg = "zxzx74147second"
         repo = "MediaCore"
         name = "MediaCore"
         desc = 'A media lib for Android, include record, edit, play.'
